--- a/strawberry.org
+++ b/strawberry.org
@@ -10,7 +10,7 @@
 * Overview and introduction
 Below is the code I have written to implement a /plant propagation algorithm/.  It is based on the algorithm Professor Abdellah Salhi and I developed from his original insight into the propagation of strawberry plants.  The basis of the code in this particular repository is the code used for the results presented in a paper on the modelling of energy systems for domestic dwellings ([[http://dx.doi.org/10.1260/1748-3018.9.1.13][Fraga et al., 2015]]).  This code was in turn based on the code used for the original paper ([[https://www.researchgate.net/publication/252321319_Nature-Inspired_Optimisation_Approaches_and_the_New_Plant_Propagation_Algorithm][Salhi & Fraga, 2011]]).  The multi-objective ranking method for fitness evaluation has been described in an up-coming publication ([[http://www.springer.com/gb/book/9783319299730][Fraga & Amusat, 2016]]).
 
-*Breaking news*! An implementation of the plant propagation algorithm in the [[http://julialang.org/][Julia programming language]], known as [[file:fresa.org][Fresa]], is now available and under further development.  The advantage of this new implementation is the use of Julia.  Julia is a new language for scientific computation which has many key properties including parallel computing and /just-in-time/ compilation of code for efficiency.
+*Breaking news*! An implementation of the plant propagation algorithm in the [[http://julialang.org/][Julia programming language]], known as [[file:fresa.org][Fresa]], is now available and under further development.  The advantage of this new implementation is the use of Julia.  Julia is a new language for scientific computation which has many key properties including abstract data and dynamic types, multiple dispatch, parallel computing and /just-in-time/ compilation of code for efficiency.
 
 The /Strawberry/ algorithm has been implemented in the [[http://www.gnu.org/software/octave/][Octave]] programming language.  A MATLAB compatible (untested) version, automagically generated from the Octave code, is made available from a link below but it should be noted that the author prefers to use open source software.  The Octave version is embedded in the [[http:strawberry.org][the original ~org~ document]] used to generate this web page.  This document has been written using [[http://orgmode.org/][org mode]] in the [[https://www.gnu.org/software/emacs/][Emacs]] text editor.  Org allows for /literate programming/ and uses /tangling/ to generate the actual source files for the code.  The code, suitably manipulated to be compatible with MATLAB, +can be found here+: call_distribution().
 
@@ -52,7 +52,7 @@ In the following code, we assume column vectors for decision variables and objec
 #+end_src 
 
 #+results: distribution
-[[file:./strawberry-20161129.zip][strawberry-20161129.zip]]
+[[file:./strawberry-20161130.zip][strawberry-20161130.zip]]
 
 * Version information
 
@@ -502,7 +502,10 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
   printf('MOSD improvements: %d\n', mosd_numberimproved);
   endfunction
 #+end_src
-* distance -- default implementation
+* support functions
+#+toc: headlines 1 local
+
+** distance -- default implementation
 The distance method determines how far to send a runner.  The first argument is the fitness, \(f \in [0,1]\), and the second is the dimension of the problem, \(n>0\), i.e. the number of decision variables.  
 
 The basic premise is that the fitter the solution, the less far runners are sent as there is plenty of /food/ in this local neighbourhood.  A less fit point will send runners further.
@@ -511,7 +514,7 @@ The basic premise is that the fitter the solution, the less far runners are sent
     d = (1-f) * 2*(rand(n,1)-0.5);
   endfunction
 #+end_src
-* fitness -- for single and multi-objective functions
+** fitness -- for single and multi-objective functions
 
 The fitness of the members in the population is calculated differently for 1 criterion problems and multi-criteria problems.  The former is based on a scaled value within the range of values for feasible and infeasible solutions separately.
 
@@ -609,7 +612,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
 
 #+end_src 
 
-* initialise -- default values and version information
+** initialise -- default values and version information
 
 #+name: version
 #+begin_src octave :tangle strawberry_initialise.m
@@ -619,7 +622,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2016.11.30 09:52:47';
+      strawberry_version = '2016.11.30 10:00:14';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
@@ -656,7 +659,7 @@ These functions allow strawberry to be used for more general problems than just 
     printf (': using default neighbouring solution generator function.\n')
   endif
 #+end_src
-* isdiverse -- identify solutions that differ
+** isdiverse -- identify solutions that differ
 We only want to add solutions to the population that are diverse, i.e. significantly different, from those that are already there.  However, the diversity control should not be at the expense of losing better solutions.  The current implementation is not good in this respect and should be used with care as a result.
 #+begin_src octave :tangle strawberry_isdiverse.m
   function diverse = strawberry_isdiverse (pop, x)
@@ -671,7 +674,7 @@ We only want to add solutions to the population that are diverse, i.e. significa
     if ~ diverse, nsimilar = nsimilar + 1; endif
   endfunction
 #+end_src
-* neighbour -- for compact real valued domains
+** neighbour -- for compact real valued domains
 Given a fitness value and a point in the search space, generate a new point in the space.  The better the fitness, the closer the point should be to the given point.  The basis of the Strawberry algorithm is that fit points generate more points in the local area; less fit points generate fewer new points but further away.  Exploitation versus exploration.
 
 The default implementation uses the fitness to define a distance within the bounds of the variables for each dimension.
@@ -688,7 +691,7 @@ The default implementation uses the fitness to define a distance within the boun
     n(n>strawberry_upper) = strawberry_upper(n>strawberry_upper);        # reset to boundary
   endfunction
 #+end_src
-* newpopulation -- create an initial population
+** newpopulation -- create an initial population
 Create a random population, distributed uniformly (hopefully) throughout the domain defined by the lower and upper bounds of the optimisation variables.
 #+name: newpopulation
 #+begin_src octave :tangle strawberry_newpopulation.m
@@ -747,7 +750,7 @@ Create a random population, distributed uniformly (hopefully) throughout the dom
     nz = n-nx-1
   endfunction
 #+end_src
-* populationstatistics -- mostly for debugging
+** populationstatistics -- mostly for debugging
 #+name: populationstatistics
 #+begin_src octave :tangle populationstatistics.m
   function populationstatistics(s,p,nx,nz)
@@ -771,7 +774,7 @@ Create a random population, distributed uniformly (hopefully) throughout the dom
     endif
   endfunction
 #+end_src 
-* prune -- remove non-diverse members 
+** prune -- remove non-diverse members 
 Especially for multi-objective problems, we have a problem with diversity in that the pareto set forms an *elite* set.  If this set has multiple copies of the same solutions, the set can grow quite large and increases the computational effort dramatically with little effect on the quality of the solutions obtained.
 #+name: prune
 #+begin_src octave :tangle strawberry_prune.m
@@ -811,7 +814,7 @@ Especially for multi-objective problems, we have a problem with diversity in tha
     endif
   endfunction
 #+end_src
-* random solution -- generate a new solution 
+** random solution -- generate a new solution 
 By default, this function returns a random solution in a compact hypercube domain in R^n defined by the bounds on the variables.  The default function requires the definition of the lower and upper bounds for the domain.
 #+begin_src octave :tangle strawberry_randomsolution.m
   function x = strawberry_randomsolution()
@@ -821,7 +824,7 @@ By default, this function returns a random solution in a compact hypercube domai
     x = strawberry_lower + r.*(strawberry_upper-strawberry_lower);
   endfunction
 #+end_src
-* runners -- number a function of fitness
+** runners -- number a function of fitness
 Two aspects define a plant propagation algorithm: the distance for the runners to propagate and the number of such runners that are generated.  This function addresses the latter.  The better the solution, defined by the fitness \(N\), the more runners should be generated.  The actual number of runners is \(\in [1,N_{r,max}]\) and is randomly generated.
 
 #+begin_src octave :tangle strawberry_runners.m
@@ -832,7 +835,7 @@ Two aspects define a plant propagation algorithm: the distance for the runners t
     debugprint (4, ':runners N r runners max', [N, r, nr, nrmax])
   endfunction
 #+end_src
-* select -- tournament fitness based selection
+** select -- tournament fitness based selection
 Selection from the current population, for propagation of runners, is based on a sample size 2 *tournament* selection.  This could be generalised to have a greater number of individuals selected for a tournament, emphasising the most fit solutions.  Other selection approaches could of course be used instead.  Our experience is that this simple selection procedure is effective in balancing the global and local search aspects of a plant propagation algorithm.
 
 The one modification we have with respect to the standard selection procedure is that we only select from those individuals that have not already been selected in the current generation.
@@ -874,7 +877,7 @@ The one modification we have with respect to the standard selection procedure is
     endif
   endfunction
 #+end_src
-* sort -- for single criterion problems
+** sort -- for single criterion problems
 For single criterion problems, we sort the population in order of decreasing fitness.  This is purely for the purpose of output and could be removed entirely.
 #+begin_src octave :tangle strawberry_sort.m
   function pop = strawberry_sort (pop,nx,nz)
